fix a overflow problem

--- a/admin/css/admin.scss
+++ b/admin/css/admin.scss
@@ -155,6 +155,7 @@ body {
 #main_content {
   min-width: 1300px;
   height: 100%;
+  overflow: hidden;
 
   #left_panel {
     float: left;
